<resources>
    <string name="app_name">MSIU timetable</string>
    <string name="action_settings">Settings</string>
    <string name="time">time</string>
    <string name="subject">Subject</string>
    <string name="teacher">Teacher</string>
    <string name="place">place</string>
    <string name="type">type</string>
    <string name="dayweek">Dayweek</string>
    <string name="weekch">Четная неделя</string>
    <string name="weeknech">Нечетная неделя</string>
    <string name="change">Сменить курс и группу</string>
    <string name="title_activity_about">About</string>

    <string name="hello_world">Hello world!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
