<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/weekch"
        android:orderInCategory="1"
        android:title="@string/weekch"
        app:showAsAction="never" />
    <item
        android:id="@+id/weeknech"
        android:orderInCategory="2"
        android:title="@string/weeknech"
        app:showAsAction="never" />
    <item
        android:id="@+id/change"
        android:orderInCategory="3"
        android:title="@string/change"
        app:showAsAction="never" />
    <item
        android:id="@+id/about"
        android:orderInCategory="100"
        android:title="О программе"
        app:showAsAction="never" />
    <item
        android:id="@+id/textSize"
        android:orderInCategory="4"
        android:title="Размер шрифта" />
</menu>
