<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/line_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5sp"
        android:background="@android:color/black"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="true"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_weight="0.1"
            android:gravity="left"
            android:text="@string/time"
            android:textSize="18sp"
            android:textStyle="bold" />

        <View
            android:layout_width="1sp"
            android:layout_height="match_parent"
            android:layout_marginRight="5dp"
            android:background="@android:color/black" />

        <LinearLayout
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="10dp"
            android:layout_weight="0.6"
            android:orientation="vertical">

            <TextView
                android:id="@+id/subject"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.6"
                android:gravity="left"
                android:text="@string/subject"
                android:textSize="@dimen/textSize" />

            <TextView
                android:id="@+id/teacher"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/teacher"
                android:textSize="14sp" />
        </LinearLayout>

        <View
            android:layout_width="1sp"
            android:layout_height="match_parent"
            android:background="@android:color/black" />

        <LinearLayout
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/place"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/place"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="@dimen/textSize" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/black" />

            <TextView
                android:id="@+id/type"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/type"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="@dimen/textSize" />
        </LinearLayout>


    </LinearLayout>
</LinearLayout>


